--- a/disk/templates/m-main.html
+++ b/disk/templates/m-main.html
@@ -348,21 +348,6 @@
 
       </div>
 
-      <!--индикация состояния загрузки файла-->
-      <div id="file_upload_block" style="display: none">
-        <!---->
-        <div class="file_upload_info">
-          <img class="icon anim_rotate" style="position: absolute; right: 8px; top: 8px;" width="35" height="35" src="static/img/dvd-disk.svg">
-          <p id="upload_file_count" style="margin: 10px 10px;">Upload 0 files...</p>
-          <h3 id="upload_file_name" style="margin: 10px 10px;">test.txt</h3>
-        </div>
-
-        <!--информация о диске в виде прогресс бара-->
-        <div class="upload_bg">
-          <div id="upload_progress" class="upload_progress"></div>
-        </div>
-      </div>
-
     </div>
 
     <div id="background_black" class="background_black" style="display: none" onclick="close_user()"></div>
@@ -372,9 +357,14 @@
       <ul id="path_list" style="position: absolute; top: -14px; width: 100%"></ul>
     </div>
 
-    <div id="dialog_bg" class="dialog_backgound" onclick="close_dialogs()"></div>
+    <div id="dialog_bg" class="dialog_backgound" onclick="close_dialogs()" style="display: none"></div>
 
     <!--диалоговые окна-->
+
+    <!-- Загрузка файла -->
+    <div id="dialog_upload" class="dialog_style scroll_style" style="display: none">
+      <ul id="file_upload_ul" class="file_upload_ul"></ul>
+    </div>
 
     <!-- Изменение логина -->
     <div id="dialog_change_login" class="dialog_style" style="height: 200px;">
