--- a/disk/templates/m-main.html
+++ b/disk/templates/m-main.html
@@ -265,6 +265,11 @@
 
         <!--продпросмотр фотографии-->
         <div id="file_activity_view" class="activity_container">
+          <div class="preview_text" id="preview_archive_div">
+            <div class="preview_archive input_style scroll_style">
+              <ul id="preview_archive_ul" class="preview_archive_ul"></ul>
+            </div>
+          </div>
 
           <div class="preview_text" id="preview_text_div">
             <textarea id="preview_text_textarea" class="preview_text_textarea input_style scroll_style" readonly></textarea>
