--- a/disk/templates/login.html
+++ b/disk/templates/login.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>[ DISK: Login ]</title>
+    <link rel="icon" href="/static/img/favicon/main.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
 
