--- a/disk/templates/admin.html
+++ b/disk/templates/admin.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>[ DISK: Dashboard ]</title>
+    <link rel="icon" href="/static/img/favicon/dashboard.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href = "static/css/admin/main.1.css"/>
