--- a/disk/templates/editor.html
+++ b/disk/templates/editor.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>[ EDITOR ]</title>
+    <link rel="icon" href="/static/img/favicon/edit.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
 
