--- a/disk/templates/m-main.html
+++ b/disk/templates/m-main.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>[ DISK ]</title>
+    <link rel="icon" href="/static/img/favicon/main.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
     <link rel="stylesheet" href = "static/css/checkBox.1.css"/>
@@ -50,7 +51,7 @@
       </div>
 
       <div id="path_select_button" class="path_select_button block_select button_margin" onclick="open_close_path_button()">
-        <img class="icon" style="margin: 10px 10px" width="25" height="25" src="static/img/dvd-disk.svg">
+        <img id="disk_space_img" class="icon" style="margin: 10px 10px" width="25" height="25" src="static/img/dvd-disk.svg">
         <p id="path_status_size" style="position: absolute; margin: -42px 45px; color: var(--color-hide-font); display: none;">1Gb</p>
         <p id="disk_converted" style="position: absolute; margin: -42px 45px; color: var(--color-hide-font);">Loading...</p>
         <p id="path_name" style="position: absolute; margin: -28px 45px">home</p>
@@ -154,6 +155,10 @@
         <div class="settings_element">
           <input type="checkbox" class="custom-checkbox top_checkBox" id="file_icons_chekcbox" name="file_icons_chekcbox" value="yes" onchange="checkBox_file_icons(this)">
           <label for="file_icons_chekcbox"><p>Colored file icons (experemental)</p></label>
+        </div>
+        <div class="settings_element">
+          <input type="checkbox" class="custom-checkbox top_checkBox" id="space_status_chekcbox" name="space_status_chekcbox" value="yes" onchange="checkBox_space_status(this)">
+          <label for="space_status_chekcbox"><p>Colored space status</p></label>
         </div>
 
         <p class="settings_name">User</p>
