--- a/disk/templates/main.html
+++ b/disk/templates/main.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>[ DISK ]</title>
+    <link rel="icon" href="/static/img/favicon/main.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
 
@@ -150,7 +151,7 @@
 
       <!--информация о диске-->
       <div class="disk_info">
-        <img class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
+        <img id="disk_space_img" class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
         <p id="disk_converted" style="margin: -23px 30px">Loading...</p>
       </div>
 
@@ -325,7 +326,11 @@
         </div>
         <div class="settings_element">
           <input type="checkbox" class="custom-checkbox top_checkBox" id="file_icons_chekcbox" name="file_icons_chekcbox" value="yes" onchange="checkBox_file_icons(this)">
-          <label for="file_icons_chekcbox"><p>Colored file icons (experemental)</p></label>
+          <label for="file_icons_chekcbox"><p>Colored file icons</p></label>
+        </div>
+        <div class="settings_element">
+          <input type="checkbox" class="custom-checkbox top_checkBox" id="space_status_chekcbox" name="space_status_chekcbox" value="yes" onchange="checkBox_space_status(this)">
+          <label for="space_status_chekcbox"><p>Colored space status</p></label>
         </div>
 
         <p class="settings_name">User</p>
