--- a/disk/templates/admin.html
+++ b/disk/templates/admin.html
@@ -357,7 +357,7 @@
 
   </body>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
+  <script src="static/js/libs/socketio.js"></script>
 
   <script type="text/javascript" src="static/js/main.1.js"></script>
   <script type="text/javascript" src="static/js/admin/admin.1.js"></script>
@@ -367,7 +367,6 @@
   <script type="text/javascript" src="static/js/admin/settings.1.js"></script>
   <script type="text/javascript" src="static/js/admin/logs.1.js"></script>
   <script type="text/javascript" src="static/js/admin/history.1.js"></script>
-
 
   <!-- xterm -->
   <!-- <script src="https://unpkg.com/xterm@4.11.0/lib/xterm.js"></script>
