--- a/extensions/openai/app.css
+++ b/extensions/openai/app.css
@@ -6,6 +6,22 @@ pre {
     color: var(--main-font-color);
 }
 
+.bottom_bar_loading {
+  display: none;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 40px;
+  background-color: #000;
+  opacity: .5;
+}
+
+.bottom_bar_loading h2 {
+  margin-top: 2px;
+  text-align: center;
+}
+
 .bottom_bar {
   position: fixed;
   bottom: 0px;
