--- a/disk/static/css/topBar.1.css
+++ b/disk/static/css/topBar.1.css
@@ -99,15 +99,19 @@
 
 .file_list_close_button {
   position: absolute;
-  right: 0px;
-  top: -2px;
+  right: 5px;
+  top: 3px;
   height: 35px;
   cursor: pointer;
 }
 
+.file_list_close_button img {
+  margin: 2px 5px;
+}
+
 .file_list_download_button {
   position: absolute;
-  right: 40px;
+  right: 60px;
   top: 3px;
   height: 35px;
   cursor: pointer;
@@ -115,7 +119,7 @@
 
 .file_list_delete_button {
   position: absolute;
-  right: 145px;
+  right: 165px;
   top: 3px;
   height: 35px;
   cursor: pointer;
@@ -124,7 +128,7 @@
 /**/
 .file_list_paste_button {
   position: absolute;
-  right: 50px;
+  right: 70px;
   top: 3px;
   height: 35px;
   width: 90px;
@@ -138,7 +142,7 @@
 
 .file_list_copy_button {
   position: absolute;
-  right: 75px;
+  right: 95px;
   top: 3px;
   height: 35px;
   cursor: pointer;
@@ -146,7 +150,7 @@
 
 .file_list_cut_button {
   position: absolute;
-  right: 110px;
+  right: 130px;
   top: 3px;
   height: 35px;
   cursor: pointer;
