--- a/disk/templates/main.html
+++ b/disk/templates/main.html
@@ -43,7 +43,7 @@
         </div>
 
         <!--кнопка для закрытия-->
-        <div id="file_list_delete_button" class="file_list_close_button block_select button_margin" onclick="undo_files_checkBox(); close_selected_files_div();">
+        <div id="file_list_delete_button" class="round_button_file_list file_list_close_button block_select button_margin" onclick="undo_files_checkBox(); close_selected_files_div();">
           <img class="icon" width="30" height="30" src="static/img/cross.svg">
         </div>
 
