--- a/disk/templates/admin.html
+++ b/disk/templates/admin.html
@@ -14,7 +14,7 @@
 
   </head>
 
-  <body bgcolor = "#0D1117" style="overflow-x:hidden;">
+  <body bgcolor = "#0D1117" style="overflow-x:hidden;" class="scroll_style">
     <div class="left_bar">
       <div class="logo">
         <img class="icon logo_img" width="50" height="50" src="static/img/dvd-disk.svg">
@@ -244,7 +244,7 @@
         </div>
       </div>
       <div class="border_size">
-        <ul id="templateslist" class="grid"></ul>
+        <ul id="templateslist" class="grid grid_margin"></ul>
       </div>
     </div>
 
