--- a/disk/templates/admin.html
+++ b/disk/templates/admin.html
@@ -317,12 +317,12 @@
           <p style="margin: -25px 35px; white-space: nowrap;">save settings</p>
         </div>
       </div>
-      <ul class="grid grid_margin">
+      <ul class="grid">
         <li>
-          <ul id="settings_left"></ul>
+          <ul id="settings_left" class="grid_margin"></ul>
         </li>
         <li>
-          <ul id="settings_right"></ul>
+          <ul id="settings_right" class="grid_margin"></ul>
         </li>
       </ul>
 
