--- a/disk/static/css/admin/left_bar.1.css
+++ b/disk/static/css/admin/left_bar.1.css
@@ -1,20 +1,69 @@
 
 
 @media screen and (min-width: 768px) {
+  .logo {
+    position: relative;
+    left: 10%;
+    padding-bottom: 0px;
+  }
+
+  .close_menu {
+    display: none;
+  }
+
   .left_bar {
     position: absolute;
     top: 40px;
     left: 2%;
   }
+
+  .top_bar {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 768px) {
-  .left_bar {
-    position: absolute;
-    top: 40px;
-    left: 50%;
-    margin: 0 -125;
+  .logo {
+    display: none;
   }
+
+  .close_menu {
+    display: block;
+    margin: 5px 10px;
+    margin-bottom: 15px;
+  }
+
+  .left_bar {
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background-color: #0D1117;
+    z-index: 2;
+    height: 100%;
+  }
+
+  .top_bar {
+    display: block;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 40px;
+    background-color: #161B22;
+  }
+}
+
+.menu_bg_div {
+  position: fixed;
+  display: none;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: #000;
+  opacity: .6;
 }
 
 .menu_table {
