--- a/disk/templates/main.html
+++ b/disk/templates/main.html
@@ -675,7 +675,17 @@
   <script type="text/javascript" src="static/js/user.1.js"></script>
   <script type="text/javascript" src="static/js/upload_file.1.js"></script>
   <script type="text/javascript" src="static/js/player.1.js"></script>
-  <script type="text/javascript" src="static/js/file.1.js"></script>
+
+  <script type="text/javascript" src="static/js/file/globals.1.js"></script>
+  <script type="text/javascript" src="static/js/file/append.1.js"></script>
+  <script type="text/javascript" src="static/js/file/dialogs.1.js"></script>
+  <script type="text/javascript" src="static/js/file/preview.1.js"></script>
+  <script type="text/javascript" src="static/js/file/select.1.js"></script>
+  <script type="text/javascript" src="static/js/file/sort.1.js"></script>
+  <script type="text/javascript" src="static/js/file/move.1.js"></script>
+  <script type="text/javascript" src="static/js/file/routes.1.js"></script>
+  <script type="text/javascript" src="static/js/file/render.1.js"></script>
+
   <script type="text/javascript" src="static/js/apps.1.js"></script>
 
 </html>
