--- a/extensions/bash/app.css
+++ b/extensions/bash/app.css
@@ -1,6 +1,6 @@
 #terminal {
   position: fixed;
-  top: 0px;
+  top: 26px;
   bottom: 0px;
   left: 0px;
   right: 0px;
@@ -15,4 +15,30 @@
 .xterm-viewport::-webkit-scrollbar-thumb {
   background: #2F363D;
   border-radius: 2px;
+}
+
+.terminal_info {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: #000;
+  width: 100%;
+  height: 22px;
+  border-bottom: 2px dashed #FFFFFF;
+  font-feature-settings: "liga" 0;
+}
+
+.terminal_info #ping {
+  margin: 0;
+  position: absolute;
+  top: 0px;
+  left: 2px;
+
+  font-family: courier-new, courier, monospace;
+  font-size: 15;
+  color: #FFFFFF;
+}
+
+.black_blank {
+  background-color: #000;
 }
